--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <span class="clicks">Сделай клик <span id="cs">0</span></span>
+    <span class="clicks">Сделай кликсы <span id="cs">0</span></span>
     <script src="script.js"></script>
 </body>
 </html>
