--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css" class="rel">
 </head>
 <body>
-    
-    <span class="clicks">Сделай кликсы <span id="cs">0</span></span>
+    <button class="new_game_button">Новая игра</button>
+  
     <script src="script.js"></script>
 </body>
 </html>
