--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css" class="rel">
 </head>
 <body>
+    
+    <canvas id></canvas>
     <button class="new_game_button">Новая игра</button>
   
     <script src="script.js"></script>
